UF-7563: Added pagination for resource returning list
